--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@ nav ul {
 }
 nav li {
 	list-style-position: inside;
-	font: 14px 'Oswald', sans-serif;
-	padding: 10px;
+    font: 14px, 'Oswald', sans-serif;
+    padding:10px;
 }
 .top-menu li {
 	display: inline-block;
