--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ nav ul {
 }
 nav li {
 	list-style-position: inside;
-    font: 14px, 'Oswald', sans-serif;
+    font: 14px 'Oswald', sans-serif;
     padding:10px;
 }
 .top-menu li {
