--- a/dotabuffgavno/styles2.css
+++ b/dotabuffgavno/styles2.css
@@ -9,14 +9,13 @@ body{
 header{
     background-color: #272727;
     height: 100px;
-    border-bottom: 1px solid darkslategray;
 }
 input[type="text"] {
     background-color: #272727;
-    border: 1px solid darkslategray;
+    border: 1px solid #1D1D1D;
     width:300px;
     height: 40px;
-    color: #b2b2b2;
+    color: lightgray;
     padding: 0 10px;
     margin-left: 570px;
     margin-top: 40px;
@@ -95,7 +94,6 @@ footer{
     text-align: center;
     margin-top: 600px;
     background: #272727;
-    border-top: 1px solid  darkslategray;
 }
 
 img{
