--- a/dotabuffgavno/styles2.css
+++ b/dotabuffgavno/styles2.css
@@ -14,7 +14,7 @@ input[type="text"] {
     background-color: #272727;
     border: 1px solid #1D1D1D;
     width:300px;
-    height: 40px;
+    height: 45px;
     color: lightgray;
     padding: 0 10px;
     margin-left: 570px;
@@ -22,6 +22,7 @@ input[type="text"] {
     vertical-align: top;
     font-size:15px;
     text-align:left;
+    padding-right: 40px;
 }
 .wrapper{
     max-width: 2000px;
@@ -49,7 +50,7 @@ p.redbg {
 }
 p.formenter{
     text-align: right;
-    color:limegreen;
+    color:#A9CF54;
     cursor:pointer;
     margin-left:260px;
 
@@ -59,7 +60,7 @@ p.bluewords{
     cursor:pointer;
 }
 p.normalp{
-    color:limegreen;
+    color:#A9CF54;
     cursor:pointer;
 }
 p.orangep{
@@ -86,6 +87,7 @@ span.more{
 }
 a:hover{
     text-decoration: underline;
+    cursor:pointer;
 }
 footer{
     margin: auto;
@@ -99,4 +101,16 @@ footer{
 img{
     padding-left:610px;
     margin-top:70px;
+}
+.NEW{
+    color:#FFFFFF;
+    font-family:Arial;
+}
+.verticb{
+    color:white;
+}
+p.updateinf{
+    margin-left: 570px;
+    margin-top: 60px;
+    color:#A9CF54;
 }
